--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -58,7 +58,7 @@
                         <button id="task-button" onclick="createTask()">&#x2b;</button>
                     </div>
                     <!-- Demo Storys-->
-                    
+
                 </div>
                 <!-- In Progress-->
                 <div class="kanban-block story-table" id="inprogress" class="inProgress" ondrop="drop(event)"
@@ -79,6 +79,7 @@
                     </strong>
                 </div>
             </div>
+        </div>
     </main>
 
     <!-- JavaScript Bundle with Popper Bootstrap-->
