--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -33,7 +33,7 @@
             <textarea id="descritptionForm" rows="3" placeholder="Description"></textarea>
             <!-- Selection color -->
             <select id="storyColorForm">
-                <option class="red" value="#E60000">red</option>
+                <option class="red" value="#e60000">red</option>
                 <option class="yellow" value="#e6bf33">yellow</option>
                 <option class="green" value="#aacc33">green</option>
                 <option class="blue" value="#6495ED">blue</option>
