--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -36,9 +36,10 @@
                     <option class="red" value="#e60000">red</option>
                     <option class="yellow" value="#e6bf33">yellow</option>
                     <option class="green" value="#aacc33">green</option>
-                    <option class="blue" value="#6495ED">blue</option>
+                    <option class="blue" value="#6495ed">blue</option>
                     <option class="purple" value="#8e7cc3">purple</option>
                 </select>
+                <input type="datetime-local" id="storyDueDate"></input>
                 <button type="button" class="btn btn-danger" id="save-button" onclick="saveTask()">Save</button>
                 <button type="button" class="btn btn-danger" id="delete-button">Delete</button>
                 <button type="button" class="btn btn-danger" id="update-button">Update</button>
