Direct websocket communication using path-parameters
Added direct-websocket communication using parameters that can be changed however one likes.

--- a/project/src/main/resources/static/html/index.html
+++ b/project/src/main/resources/static/html/index.html
@@ -11,6 +11,7 @@
 
   <input id="email" placeholder="email"><br>
   <input id="password" placeholder="password"><br>
+  <input id="boardid" placeholder="boardid"><br>
   <button onclick="begin()">begin</button><br><br>
   <label for="message-input">
     Enter message to send
