--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -31,6 +31,11 @@
             <div>
                 <input type="text" id="storyNameForm" placeholder="Name"></input>
                 <textarea id="descritptionForm" rows="3" placeholder="Description"></textarea>
+                <!-- Priority -->
+                <select id="storyPriorityForm">
+                    <option class="high" value="high">High</option>
+                    <option class="low" value="low">Low</option>
+                </select>
                 <!-- Selection color -->
                 <select id="storyColorForm">
                     <option class="red" value="#e60000">red</option>
