replaced blur with backdrop

--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <md-backdrop class="md-backdrop"></md-backdrop>
     <!-- Sidebar navigation-->
     <div id="mySidenav" class="sidenav">
         <a href="#">Settings</a>
