--- a/project/src/main/resources/static/html/index.html
+++ b/project/src/main/resources/static/html/index.html
@@ -32,7 +32,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"
           integrity="sha512-iKDtgDyTHjAitUDdLljGhenhPwrbBfqTKWO1mkhSFH3A7blITC9MhYon6SjnMhp4o0rADGw9yAC6EW4t5a4K3g=="
           crossorigin="anonymous"></script>
-  <script src="./main.js"></script>
+  <script src="../scripts/main.js"></script>
 
 </body>
 
