--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -78,6 +78,7 @@
                         <span class="storyInformation" id="demo0-storyExtensionButton" data-hover="Show more" onclick="showMore('demo0')">»</span>
                         <span class="storyInformation closeButton" id="demo0-storyCloseButton" data-hover="Close" onclick="showLess('demo0')">&#171;</span>
                         <div id="demo0-showMoreBlock" class="showMoreBlock">
+                            <div>Due date:</div>
                             <small class="dueDate" id="demo0-dueDate">2022-08-24 20:00</small>
                         </div>
                     </div>
