--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-    <md-backdrop class="md-backdrop"></md-backdrop>
     <!-- Sidebar navigation-->
     <div id="mySidenav" class="sidenav">
         <a href="#">Settings</a>
@@ -23,6 +22,8 @@
         <a href="#">Statistics</a>
         <a href="#">Sign out</a>
     </div>
+    <md-backdrop class="md-backdrop"></md-backdrop>
+    
 
     <main id="main">
         <!-- Create a new Story -->
@@ -31,8 +32,9 @@
             <span style="font-size:25px;cursor:pointer" id="cancel-button" onclick="cancelCreateTask()">&#10799;</span>
             <span id="storyPriority"></span>
             <div>
-                <input type="text" id="storyNameForm" placeholder="Name"></input>
-                <textarea id="descritptionForm" rows="3" placeholder="Description"></textarea>
+                <input type="text" id="storyNameForm" placeholder="Name" maxlength="50"></input>
+                <textarea id="descritptionForm" rows="3" placeholder="Description" maxlength="300"></textarea>
+                <textarea id="definitionOfDoneForm" rows="2" placeholder="Definition of done" maxlength="300"></textarea>
                 <!-- Priority -->
                 <select id="storyPriorityForm">
                     <option class="high" value="&#33;">High</option>
@@ -57,6 +59,9 @@
         <span style="font-size:30px;cursor:pointer" onclick="manageSidebar()">&#9776;</span>
         <!-- Kanban board -->
         <div class="container">
+            <div class="kanbanBoardTitle">
+                <h1>Title of the Kanbanboard</h1>
+            </div>
             <div class="kanban-board">
                 <!-- Backlog-->
                 <div class="kanban-block story-table" id="todo" class="backlog" ondrop="drop(event)"
