some more changes
added some classes to the css file and still fixing the stupid login to register button switch so its centered
[PAIN]

--- a/project/src/main/resources/static/html/Log-in.html
+++ b/project/src/main/resources/static/html/Log-in.html
@@ -31,21 +31,23 @@
                                         <button type="button" id="registerbtn" class="toggle-btn" onclick="register()">Register</button>
                                     </div>
                                 </div> 
-                            <div class="row center-content form-cred">
-                                <!-- Input Login-->
-                                <form id="login" class="input-groups col">
-                                    <input type="email" class="input-field" placeholder="E-Mail" required>
-                                    <input type="password" class="input-field" placeholder="Enter Password" required>
-                                    <button type="submit" class="submit-btn" id="submit2">Log in</button>
-                                </form>
-                                <!--Input Register-->
-                                <form id="register" class="input-groups col">
-                                    <input type="text" class="input-field" placeholder="Full Name" required>
-                                    <input type="email" class="input-field" placeholder="Enter E-Mail" required>
-                                    <input type="password" class="input-field" placeholder="Enter Password" required>
-                                    <input type="password" class="input-field" placeholder="Enter Password again" required>
-                                    <button type="submit" class="submit-btn col" id="submit1">Register</button>
-                                </form>
+                            <div class="row">
+                                <div class="col center-content form-cred">
+                                    <!-- Input Login-->
+                                    <form id="login" class="input-groups col">
+                                        <input type="email" class="input-field" placeholder="E-Mail" required>
+                                        <input type="password" class="input-field" placeholder="Enter Password" required>
+                                        <button type="submit" class="submit-btn" id="submit2">Log in</button>
+                                    </form>
+                                    <!--Input Register-->
+                                    <form id="register" class="input-groups col">
+                                        <input type="text" class="input-field" placeholder="Full Name" required>
+                                        <input type="email" class="input-field" placeholder="Enter E-Mail" required>
+                                        <input type="password" class="input-field" placeholder="Enter Password" required>
+                                        <input type="password" class="input-field" placeholder="Enter Password again" required>
+                                        <button type="submit" class="submit-btn col" id="submit1">Register</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                          
