--- a/project/src/main/resources/static/html/Log-in.html
+++ b/project/src/main/resources/static/html/Log-in.html
@@ -29,7 +29,7 @@
                 <section class="row">
                     
                         <div class="form-box col">
-                            <div class="row center-content center-content "><img id="logo" class="col-8" src="..\Pics\ubs_logo.png" alt="UBS Logo"></div>
+                            <div class="row center-content center-content "><img id="logo" class="col-8" src="..\images\ubs_logo.png" alt="UBS Logo"></div>
                             
                                 <div class="row login-menu center-content">
                                     <div class="row center-content ">
