changed css values

--- a/project/src/main/resources/static/html/Log-in.html
+++ b/project/src/main/resources/static/html/Log-in.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                 </header>
-                <section class="row">
+                <section class="row login-window">
                     
                         <div class="form-box col">
                             <div class="row center-content center-content "><img id="logo" class="col-8" src="..\images\ubs_logo.png" alt="UBS Logo"></div>
