added  reset password anchor

--- a/project/src/main/resources/static/html/Log-in.html
+++ b/project/src/main/resources/static/html/Log-in.html
@@ -43,10 +43,12 @@
                                 <div class="row center-content">
                                     <div class="col-7 center-content form-cred">
                                         <!-- Input Login-->
-                                        <form id="login" class="input-groups  col-12">
+                                        <form id="login" class="input-groups  col-12 center-text">
                                             <input type="email" class="input-field" placeholder="E-Mail" required>
                                             <input type="password" class="input-field" placeholder="Enter Password" required>
                                             <button type="submit" class="submit-btn" id="submit2">Log in</button>
+                                            <p id="forgottPWD">Did you forget your password?</p>
+                                            <a href="#" id="resetPWD">Reset Password</a>
                                         </form>
                                         <!--Input Register-->
                                         <form id="register" class="input-groups col-12 ">
