--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="..\styles\quentin.css">
     <!-- JavaScript -->
-    <script language="javascript" type="text/javascript" src="..\scripts\kanbanboard.js"></script>
     <!-- CSS only Bootstrap-->
+    <script language="javascript" type="text/javascript" src="..\scripts\kanbanboard.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Kanban-Board</title>
@@ -17,7 +18,7 @@
 <body>
     <!-- Sidebar navigation-->
     <div id="mySidenav" class="sidenav">
-        <a href="#">Settings</a>
+        <a href="#" onclick="openSettings()">Settings</a>
         <a href="#">Dashbord</a>
         <a href="#">Statistics</a>
         <a href="#">Sign out</a>
@@ -27,6 +28,23 @@
 
     <main id="main">
         <!-- Create a new Story -->
+
+        <div class="create-new-task-block" id="settingsblock">
+            <!-- cancel cross -->
+            <span style="font-size:25px;cursor:pointer" id="cancel-button" onclick="closeSettings()">&#10799;</span>
+            <span id="storyPriority"></span>
+            <div>
+                <input type="text" id="redWorkers" placeholder="Red Workers" maxlength="50"></input>
+                <input type="text" id="yellowWorkers" placeholder="Yellow Workers" maxlength="50"></input>
+                <input type="text" id="greenWorkers" placeholder="Green Workers" maxlength="50"></input>
+                <input type="text" id="blueWorkers" placeholder="Blue Workers" maxlength="50"></input>
+                <input type="text" id="purpleWorkers" placeholder="Purple Workers" maxlength="50"></input>
+            </div>
+            <button type="button" class="btn btn-danger" onclick="saveSettings()">Save</button>
+            <button type="button" class="btn btn-danger">Delete</button>
+
+        </div>
+
         <div class="create-new-task-block" id="create-new-task-block">
             <!-- cancel cross -->
             <span style="font-size:25px;cursor:pointer" id="cancel-button" onclick="cancelCreateTask()">&#10799;</span>
@@ -74,7 +92,9 @@
                     </strong>
 
                     <div class="task-button-block">
-                        <button id="task-button" onclick="createTask()">&#x2b;</button>
+                        <button id="task-button" onclick="beginAll()">&#x2b;</button>
+                        <button id="task-button" onclick="startSimulation()">P</button>
+                        <button id="task-button" onclick="pauseSimulation()">II</button>
                     </div>
                     <!-- Demo Storys-->
                 </div>
@@ -99,6 +119,8 @@
             </div>
         </div>
     </main>
+
+    <script language="javascript" type="text/javascript" src="..\scripts\main.js"></script>
 
     <!-- JavaScript Bundle with Popper Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
