--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -33,12 +33,51 @@
             <!-- cancel cross -->
             <span style="font-size:25px;cursor:pointer" id="cancel-button" onclick="closeSettings()">&#10799;</span>
             <span id="storyPriority"></span>
-            <div>
-                <input type="text" id="redWorkers" placeholder="Red Workers" maxlength="50"></input>
-                <input type="text" id="yellowWorkers" placeholder="Yellow Workers" maxlength="50"></input>
-                <input type="text" id="greenWorkers" placeholder="Green Workers" maxlength="50"></input>
-                <input type="text" id="blueWorkers" placeholder="Blue Workers" maxlength="50"></input>
-                <input type="text" id="purpleWorkers" placeholder="Purple Workers" maxlength="50"></input>
+            <div><br>
+                <input type="text" id="redWorkers" placeholder="Red Workers" maxlength="50"></input><br>
+                <input type="text" id="percRedTask" placeholder="Red Task %" maxlength="50" style="width: 10%" value="100"></input>
+                <input type="text" id="percYellowTask" placeholder="Yellow Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percGreenTask" placeholder="Green Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percBlueTask" placeholder="Blue Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percPurpleTask" placeholder="Purple Task %" maxlength="50" style="width: 10%" value="0"></input>
+
+
+                <input type="text" id="yellowWorkers" placeholder="Yellow Workers" maxlength="50"></input><br>
+                <input type="text" id="percRedTask" placeholder="Red Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percYellowTask" placeholder="Yellow Task %" maxlength="50" style="width: 10%" value="100"></input>
+                <input type="text" id="percGreenTask" placeholder="Green Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percBlueTask" placeholder="Blue Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percPurpleTask" placeholder="Purple Task %" maxlength="50" style="width: 10%" value="0"></input>
+
+
+
+                <input type="text" id="greenWorkers" placeholder="Green Workers" maxlength="50"></input><br>
+                <input type="text" id="percRedTask" placeholder="Red Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percYellowTask" placeholder="Yellow Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percGreenTask" placeholder="Green Task %" maxlength="50" style="width: 10%" value="100"></input>
+                <input type="text" id="percBlueTask" placeholder="Blue Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percPurpleTask" placeholder="Purple Task %" maxlength="50" style="width: 10%" value="0"></input>
+
+
+
+                <input type="text" id="blueWorkers" placeholder="Blue Workers" maxlength="50"></input><br>
+                <input type="text" id="percRedTask" placeholder="Red Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percYellowTask" placeholder="Yellow Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percGreenTask" placeholder="Green Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percBlueTask" placeholder="Blue Task %" maxlength="50" style="width: 10%" value="100"></input>
+                <input type="text" id="percPurpleTask" placeholder="Purple Task %" maxlength="50" style="width: 10%" value="0"></input>
+
+
+
+                <input type="text" id="purpleWorkers" placeholder="Purple Workers" maxlength="50"></input><br>
+                <input type="text" id="percRedTask" placeholder="Red Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percYellowTask" placeholder="Yellow Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percGreenTask" placeholder="Green Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percBlueTask" placeholder="Blue Task %" maxlength="50" style="width: 10%" value="0"></input>
+                <input type="text" id="percPurpleTask" placeholder="Purple Task %" maxlength="50" style="width: 10%" value="100"></input>
+
+
+
             </div>
             <button type="button" class="btn btn-danger" onclick="saveSettings()">Save</button>
             <button type="button" class="btn btn-danger">Delete</button>
@@ -95,6 +134,8 @@
                         <button id="task-button" onclick="beginAll()">&#x2b;</button>
                         <button id="task-button" onclick="startSimulation()">P</button>
                         <button id="task-button" onclick="pauseSimulation()">II</button>
+                        <input id="sliderTime" type="range" min="1" max="100" value="1">
+                        <span id="sliderDiv">1</span>
                     </div>
                     <!-- Demo Storys-->
                 </div>
@@ -121,7 +162,7 @@
     </main>
 
     <script language="javascript" type="text/javascript" src="..\scripts\main.js"></script>
-
+    
     <!-- JavaScript Bundle with Popper Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
