--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -134,7 +134,7 @@
                         <button id="task-button" onclick="beginAll()">&#x2b;</button>
                         <button id="task-button" onclick="startSimulation()">P</button>
                         <button id="task-button" onclick="pauseSimulation()">II</button>
-                        <input id="sliderTime" type="range" min="1" max="100" value="1">
+                        <input oninput="changeTime()" id="sliderTime" type="range" min="1" max="100" value="1">
                         <span id="sliderDiv">1</span>
                     </div>
                     <!-- Demo Storys-->
@@ -162,7 +162,7 @@
     </main>
 
     <script language="javascript" type="text/javascript" src="..\scripts\main.js"></script>
-    
+
     <!-- JavaScript Bundle with Popper Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
