Deploy Temp for first Prototype

--- a/project/src/main/resources/static/html/boardPage.html
+++ b/project/src/main/resources/static/html/boardPage.html
@@ -24,7 +24,7 @@
             <!--Top part-->
             <header>
                 <h1>Kanbanboard</h1>
-                <img src="..\images\ubs_logo.png" alt="UBS_Logo" class="logo" height="40px" width="120px">
+                <img src="..\pic\ubs_logo.png" alt="UBS_Logo" class="logo" height="40px" width="120px">
             </header>
 
             <main class="container">
