--- a/project/src/main/resources/static/html/createSimulationPage.html
+++ b/project/src/main/resources/static/html/createSimulationPage.html
@@ -7,12 +7,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="..\styles\landingPage_styles.css">
-    <title>Create Simulation</title>
-    <script src="..\scripts\landingPage_script.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    </script>
+    <link rel="stylesheet" href="..\styles\createSimulation.css">
+    <link rel="stylesheet" href="..\styles\main.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
+    <title>Create Simulation</title>
 </head>
 
 <body>
@@ -24,6 +23,7 @@
     </header>
     <!-- sidebar -->
     <div class="sidebar">
+        <p class="nav-title">Settings</p>
         <a class="tablinks active" onclick="openTabContent(event ,'backlog-settings')">
             <p class="tab-title">Backlog</p>
         </a>
@@ -95,31 +95,31 @@
                                 <div class="col">
                                     <p>Effort(h)</p>
                                     <div class="input-section">
-                                        Small: <input type="number" id="small" value="3">
+                                        Small: <input type="number" id="small-effort" value="3">
                                     </div>
                                     <div class="input-section">
-                                        Medium: <input type="number" id="small" value="10">
+                                        Medium: <input type="number" id="medium-effort" value="10">
                                     </div>
                                     <div class="input-section">
-                                        Large: <input type="number" id="small" value="25">
+                                        Large: <input type="number" id="large-effort" value="25">
                                     </div>
                                     <div class="input-section">
-                                        XLarge: <input type="number" id="small" value="75">
+                                        XLarge: <input type="number" id="xlarge-effort" value="75">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <p>Probability(%)</p>
                                     <div class="input-section">
-                                        <input type="number" id="small" value="45">
+                                        <input type="number" id="small-prob" value="45">
                                     </div>
                                     <div class="input-section">
-                                        <input type="number" id="small" value="30">
+                                        <input type="number" id="medium-prob" value="30">
                                     </div>
                                     <div class="input-section">
-                                        <input type="number" id="small" value="20">
+                                        <input type="number" id="large-prob" value="20">
                                     </div>
                                     <div class="input-section">
-                                        <input type="number" id="small" value="5">
+                                        <input type="number" id="xlarge-prob" value="5">
                                     </div>
                                 </div>
                             </div> 
@@ -144,33 +144,33 @@
                             <td><p class="team-title">Development</p></td>
                             <td><p class="team-title">QA</p></td>
                         </tr>
-                        <tr id="row-1">
-                            <th class="1-col"><input type="text" value="Analyst" placeholder="Name"></th>
-                            <th class="2-col"><input type="number" value="2"></th>
-                            <th class="3-col"><input type="number" value="100"></th>
-                            <th class="4-col"><input type="number" value="0"></th>
-                            <th class="5-col"><input type="number" value="0"></th>
-                            <th class="6-col"><label onclick="deleteRow('team-1')" class="redCross-team">&#10799;</label></th>
+                        <tr id="team-1">
+                            <th><input type="text" value="Analyst" placeholder="Name"></th>
+                            <th><input type="number" value="2"></th>
+                            <th><input type="number" value="100"></th>
+                            <th><input type="number" value="0"></th>
+                            <th><input type="number" value="0"></th>
+                            <th id="lastCell-1"><label onclick="deleteRow('team-1')" class="redCross-team">&#10799;</label></th>
                         </tr>
-                        <tr id="row-2">
-                            <th class="1-col"><input type="text" value="Developer" placeholder="Name"></th>
-                            <th class="2-col"><input type="number" value="5"></th>
-                            <th class="3-col"><input type="number" value="0"></th>
-                            <th class="4-col"><input type="number" value="100"></th>
-                            <th class="5-col"><input type="number" value="0"></th>
-                            <th class="6-col"><label onclick="deleteRow('team-2')" class="redCross-team">&#10799;</label></th>
+                        <tr id="team-2">
+                            <th><input type="text" value="Developer" placeholder="Name"></th>
+                            <th><input type="number" value="5"></th>
+                            <th><input type="number" value="0"></th>
+                            <th><input type="number" value="100"></th>
+                            <th><input type="number" value="0"></th>
+                            <th id="lastCell-2"><label onclick="deleteRow('team-2')" class="redCross-team">&#10799;</label></th>
                         </tr>
-                        <tr id="row-3">
-                            <th class="1-col"><input type="text" value="Tester" placeholder="Name"></th>
-                            <th class="2-col"><input type="number" value="3"></th>
-                            <th class="3-col"><input type="number" value="0"></th>
-                            <th class="4-col"><input type="number" value="0"></th>
-                            <th class="5-col"><input type="number" value="100"></th>
-                            <th class="6-col"><label onclick="deleteRow('team-3')" class="redCross-team">&#10799;</label></th>
+                        <tr id="team-3">
+                            <th><input type="text" value="Tester" placeholder="Name"></th>
+                            <th><input type="number" value="3" placeholder="Headcount"></th>
+                            <th><input type="number" value="0"></th>
+                            <th><input type="number" value="0"></th>
+                            <th><input type="number" value="100"></th>
+                            <th id="lastCell-3"><label onclick="deleteRow('team-3')" class="redCross-team">&#10799;</label></th>
                         </tr>
                     </table>
                     <div class="table-btn-div">
-                        <button type="button" class="table-btn" onclick="addNewTeamColumn()">Add column</button>
+                        <button type="button" class="table-btn" onclick="addTeamRow()">Add row</button>
                     </div>
                 </div>
             </div>
@@ -205,135 +205,33 @@
                                 <p class="tab-title">Queue?</p>
                             </td>
                         </tr>
-                        <tr id="1">
-                            <th><input id="1-input" type="text" placeholder="Column name" value="Analysis"></th>
-                            <th><input type="checkbox"><label onclick="deleteRow('1')" class="redCross">&#10799;</label></th>
+                        <tr id="board-1">
+                            <th><input id="1-board-input" type="text" placeholder="Column name" value="Analysis"></th>
+                            <th><input type="checkbox"><label onclick="deleteRow('board-1')" class="redCross">&#10799;</label></th>
                         </tr>
-                        <tr id="2">
-                            <th><input id="2-input" type="text" placeholder="Column name" value="Development"></th>
-                            <th><input id="123" type="checkbox"><label onclick="deleteRow('2')" class="redCross">&#10799;</label></th>
+                        <tr id="board-2">
+                            <th><input id="2-board-input" type="text" placeholder="Column name" value="Development"></th>
+                            <th><input type="checkbox"><label onclick="deleteRow('board-2')" class="redCross">&#10799;</label></th>
                         </tr>
-                        <tr id="3">
-                            <th><input id="3-input" type="text" placeholder="Column name" value="QA"></th>
-                            <th><input id="123" type="checkbox"><label onclick="deleteRow('3')" class="redCross">&#10799;</label></th>
+                        <tr id="board-3">
+                            <th><input id="3-board-input" type="text" placeholder="Column name" value="QA"></th>
+                            <th><input type="checkbox"><label onclick="deleteRow('board-3')" class="redCross">&#10799;</label></th>
                         </tr>
                     </table>
                     <div class="table-btn-div">
-                        <button type="button" class="table-btn" onclick="addNewColumn()">Add column</button>
-                        <button type="button" class="table-btn" onclick="saveBoard()">Save and reload</button>
+                        <button type="button" class="table-btn" onclick="addBoardRow()">Add column</button>
+                        <button type="button" class="table-btn" onclick="saveBoardData()">Save</button>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Backlog settings
-        <div id="backlog" class="row">
-            <h2 class="underline">Backlog</h2>
-            <div class="col settings-col">
-                <p>Task creation strategy</p>
-                <select class="col" name="task-creation-strategy" id="task-creation-strategy">
-                    <option value="limit">If Limit allows</option>
-                    <option value="constant">Constant Push</option>
-                    <option value="random">Random Push</option>
-                    <option value="scrum">Scrum</option>
-                </select>
-                <div id="special-settings-constant">
-                    Constant demand level <input type="number" value="5.5" id="demand-level"> items/day
-                </div>
-                <div id="special-settings-random">
-                    Variable demand level <input type="number" value="5.5" id="varialbe-demand-lever">
-                    items/day
-                    Expected batch size <input type="number" value="1" id="expected-batch-size"> items
-                </div>
-                <div id="special-settings-scrum">
-                    Iteration length <input type="number" value="10" id="iteration-lenght"> days
-                    Tasks per iteration <input type="number" value="55" id="task-per-iteration"> tasks
-                    Substract existing WIP from new tasks number <input type="checkbox" id="substract"
-                        value="substract">
-                </div>
-            </div>
-            <div class="col settings-col">
-                <small class="col">Task size strategy</small>
-                <select class="col" name="task-size-strategy" id="task-size-strategy">
-                    <option value="constant">Constant</option>
-                    <option value="distribution">Normal distribution</option>
-                    <option value="smlxl">S/M/L/XL</option>
-                </select>
-            </div>
+        <div>
+            <button class="temp">
+                <a href="board/temp">Board Temp</a>
+            </button>
         </div>
-        <div id="team" class="row">
-            <h2 class="underline">Team</h2>
-            <div class="col settings-col">
-                <div class="row justify-content-center">
-                    <label for="" class="col-2 group-input-label">Test</label>
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                </div>
-                <div class="row justify-content-center">
-                    <label for="" class="col-2 group-input-label">Test</label>
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                </div>
-                <div class="row justify-content-center">
-                    <label for="" class="col-2 group-input-label">Test</label>
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                </div>
-                <div class="row justify-content-center">
-                    <label for="" class="col-2 group-input-label">Test</label>
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                    <input type="text" class="col-4 group-input-field" id="#generated#">
-                </div>
-            </div>
-        </div>
-        <div id="rules" class="row">
-            <h2 class="underline">Rules</h2>
-            <div class="col settings-col">
-                <section class="row max-width dialog-row">
-                    <p>Max WIP for a person</p>
-                    <input name="max-wip-person" id="max-wip-person" type="number" />
-                </section>
-                <section class="row max-width dialog-row">
-                    <p>Max people working on one task</p>
-                    <input name="max-person-task" id="max-person-task" type="number" />
-                </section>
-                <section class="row max-width dialog-row">
-                    <p>Warmup time before Working (around)</p>
-                    <input name="max-warmup" id="max-warmup" type="number" />
-                </section>
-            </div>
-        </div>
-        <div id="board" class="row">
-            <h2 class="underline">Board</h2>
-            <div class="col settings-col">
-                <table id="board-table">
-                    <tr>
-                        <td>Column name</td>
-                        <td>Queue?</td>
-                    </tr>
-                    <tr id="1">
-                        <th><input type="text" placeholder="Column name" value="Analysis"></th>
-                        <th><input id="123" type="checkbox"><label onclick="deleteRow('1')" id="redCross"
-                                for="123">&#10799;</label></th>
-                    </tr>
-                    <tr id="2">
-                        <th><input type="text" placeholder="Column name" value="Development"></th>
-                        <th><input id="123" type="checkbox"><label onclick="deleteRow('2')" id="redCross"
-                                for="123">&#10799;</label></th>
-                    </tr>
-                    <tr id="3">
-                        <th><input type="text" placeholder="Column name" value="QA"></th>
-                        <th><input id="123" type="checkbox"><label onclick="deleteRow('3')" id="redCross"
-                                for="123">&#10799;</label></th>
-                    </tr>
-                </table>
-            </div>
-        </div>
-        <div class="row centered">
-            <div>
-                <button class="button" onclick="generateLink()"><span>Generate Link</span></button>
-            </div>
-        </div> -->
     </main>
+    <script src="..\scripts\createSimulation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
