--- a/project/src/main/resources/static/html/helpPage.html
+++ b/project/src/main/resources/static/html/helpPage.html
@@ -7,12 +7,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="..\styles\landingPage_styles.css">
-    <script src="..\scripts\landingPage_script.js"></script>
-    <title>Help</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    </script>
+    <link rel="stylesheet" href="..\styles\help.css">
+    <link rel="stylesheet" href="..\styles\main.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
+    <title>Documentation</title>
 </head>
 
 <body>
@@ -167,22 +166,15 @@
                     <div class="left-aligned">
                         <p class="left-aligned contactInfo">
                             Tel: 078 839 32 70<br>
-                            E-Mail: <a href="mailto:email@example.com, secondemail@example.com">quentin.schoenenberger@ubs.com</a>
+                            E-Mail: <a
+                                href="mailto:email@example.com, secondemail@example.com">quentin.schoenenberger@ubs.com</a>
                         </p>
                     </div>
                 </article>
-                <article class="col ">
-                    <div class="center">
-                        <h3 class="res">Resources</h3>
-                    </div>
-                    <div class="center">
-                        <div class="res">
-                            <li class="footerlink"><a href="/">Homepage</a></li>
-                            <li class="footerlink"><a href="createSimulation">Create Simulation</a></li>
-                        </div>
-                    </div>
-
-
+                <article class="col centered">
+                    <h3>Resources</h3>
+                    <li><a href="/">Homepage</a></li>
+                    <li><a href="createSimulation">Create Simulation</a></li>
                 </article>
                 <article class="col">
                     <h3>About Us</h3>
@@ -195,6 +187,7 @@
             </div>
         </div>
     </footer>
+    <script src="..\scripts\help.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
