--- a/project/src/main/resources/static/html/landingPage.html
+++ b/project/src/main/resources/static/html/landingPage.html
@@ -7,12 +7,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="..\styles\landingPage_styles.css">
-    <script src="..\scripts\landingPage_script.js"></script>
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="..\styles\landingPage.css">
+    <link rel="stylesheet" href="..\styles\main.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
+    <title>Dashboard</title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
                     <p class="left-aligned">To start the simulation click on the 'Create Simulation' Button. You can
                         make a simulation with the default settings and change them later or configurate it right here.
                     </p>
-                    <button type="button" class="button" onclick="window.open('createSimulation','_self')"><span>Create Simulation</span></button>
+                    <button type="button" class="button" onclick="window.open('createSimulation','-self')"><span>Create Simulation</span></button>
                 </article>
                 <article class="col">
                     <h3>About</h3>
@@ -80,30 +80,23 @@
                         </p>
                     </div>
                 </article>
-                <article class="col ">
-                    <div class="center">
-                        <h3 class="res">Resources</h3>
-                    </div>
-                    <div class="center">
-                        <div class="res">
-                            <li class="footerlink"><a href="help">Help</a></li>
-                            <li class="footerlink"><a href="createSimulation">Create Simulation</a></li>
-                        </div>
-                    </div>
-
-
+                <article class="col">
+                    <h3>Resources</h3>
+                    <li><a href="help">Documentation</a></li>
+                    <li><a href="createSimulation">Create Simulation</a></li>
                 </article>
                 <article class="col">
                     <h3>About Us</h3>
                     <p class="left-aligned">
-                        Non dolorem voluptatem qui. Non omnis itaque ex dignissimos tenetur et. Consectetur id fugiat
-                        nostrum et deleniti. Totam perspiciatis ipsum aut fuga. Id et distinctio nam ratione laboriosam
+                        Non dolorem voluptatem qui. Non omnis itaque ex dignissimos tenetur et. Consectetur id fugiat sed
+                        nostrum et deleniti. Totam perspiciatis ipsum aut fuga. Id et distinctio nam ratione laboriosam ex
                         enim accusamus.
                     </p>
                 </article>
             </div>
         </div>
     </footer>
+    <script src="..\scripts\landingPage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
