--- a/project/src/main/resources/static/html/boardPage.html
+++ b/project/src/main/resources/static/html/boardPage.html
@@ -55,7 +55,7 @@
                         <td class="feld col-1"></td>
                         <td class="col-1"></td>
                     </tr>
-                </table>-->
+                </table>--->
                 <div class="grid-container">
                     <div class="grid-item i1 top-titles">Backlog</div>
                     <div class="grid-item i2 top-titles">Manager</div>
