--- a/project/src/main/resources/static/html/boardPage.html
+++ b/project/src/main/resources/static/html/boardPage.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../styles/board-design.css">
         <!-- JavaScript -->
+            <script type="text/javascript" src="../Scripts/main-variables.js"></script>
             <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
             <script language="javascript" type="text/javascript" src="../scripts/kanbanboard.js"></script>
             <script type="text/javascript" src="../Scripts/build-table.js"></script>
